--- a/content/2016_starter.html
+++ b/content/2016_starter.html
@@ -1,8 +1,13 @@
 <html>
     <head>
+
+        <title> </title>
+        <meta name="tags" content="thats, awesome" />
         <meta name="date" content="2016-07-09 22:28" />
         <meta name="modified" content="2016-07-10 20:14" />
+        <meta name="category" content="yeah" />
         <meta name="authors" content="eloop team" />
+        <meta name="summary" content="Short version for index and feeds" />
     </head>
     <body bgcolor="#3979c2">
       <div style="color:white">eloop 2016</div>
