--- a/content/2016_starter.html
+++ b/content/2016_starter.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <title>eloop 2016</title>
+        <title>eloop.2016</title>
         <meta name="date" content="2016-07-09 22:28" />
         <meta name="modified" content="2016-07-10 20:14" />
         <meta name="category" content="yeah" />
