--- a/content/2016_starter.html
+++ b/content/2016_starter.html
@@ -7,8 +7,12 @@
         <meta name="category" content="yeah" />
         <meta name="authors" content="eloop team" />
     </head>
-    <body bgcolor="#3979c2">
-      <div style="color:white;font-size:small">ich lass das jetzt so</div>
+    <body>
+      <div style="width:100%;background-color:#3979c2;height:400px">
+        <center>
+        <div style="color:white">ich lass das jetzt so</div>
+        </center>
+      </div>
     </body>
 </html>
 
